deleted editor user styles and added an image, text and a nav bar

--- a/index.html
+++ b/index.html
@@ -5,28 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Hammersmith+One|Lato" rel="stylesheet">
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
         <title>Cana Owens Portfolio</title>
     </head>
     <body>
         <!-- nav bar with links to my linked in, github, email and to a pdf of resume-->
         <nav>
-            <section>
-                <h2>Cana Owens</h2>
-            </section>
-            <section class="links">
-                <!-- email -->
-                <a href="mailto:canaowens@gmail.com?Subject=Hello%20again" target="_top"><i class="fas fa-at fa-3x"></i></a>
-                <!-- linkedin (font aweseome)-->
-                <a href="https://www.linkedin.com/in/canaowens" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
-                <!-- github (font awesome) -->
-                <a href="https://github.com/Chemley" target="_blank"><i class="fab fa-github fa-3x"></i></a>
-                <!-- pdf portforlio set up on google drive as view and print and download -->
-            </section>
+            <a class="name" href="#"><h2>Cana Owens</h2></a>
+            <!-- email -->
+            <a class="links" href="mailto:canaowens@gmail.com?Subject=Hello%20again" target="_top"><i class="fas fa-at fa-3x"></i></a>
+            <!-- linkedin (font aweseome)-->
+            <a class="links" href="https://www.linkedin.com/in/canaowens" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+            <!-- github (font awesome) -->
+            <a class="links" href="https://github.com/Chemley" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+            <!-- pdf portforlio set up on google drive as view and print and download -->
+
         </nav>
         <section class="aboutMe">
-            <img src="images/CanaOwensHeadShot2.jpg">
-            <p>Words About Me</p>
+            <img class="headshot" src="images/CanaOwensHeadShot2.jpg">
+            <p class="infoAboutMe">Morbi dui dolor, consequat nec urna nec, interdum sodales nunc. In cursus egestas mi vitae mollis. Pellentesque pretium, arcu quis elementum fringilla, turpis diam pulvinar nisi, ut dapibus metus quam vitae massa. Sed a scelerisque risus. Nulla id velit tellus. Suspendisse interdum id purus sit amet elementum. Donec dapibus sem in fringilla consectetur. Cras aliquam eu magna quis ultricies.</p>
         </section>
         <section class="projects">
             <!-- image of project - react -->
