double checked styles for all view sizes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
             <h2>About Me:</h2>
             <div>
                     <img class="headshot" src="images/CanaOwensHeadShot2.jpg">
-                    <p class="infoAboutMe">Morbi dui dolor, consequat nec urna nec, interdum sodales nunc. In cursus egestas mi vitae mollis. Pellentesque pretium, arcu quis elementum fringilla, turpis diam pulvinar nisi, ut dapibus metus quam vitae massa. Sed a scelerisque risus. Nulla id velit tellus. Suspendisse interdum id purus sit amet elementum. Donec dapibus sem in fringilla consectetur. Cras aliquam eu magna quis ultricies.</p>
+                    <div>
+
+                    </div>
+                    <p class="infoAboutMe">
+                        I am a writer, developer and front-end designer who excels at creating technical instructions and standard operating procedures in a deadline-driven environment. As an instructional designer, I worked with subject-matter experts, business leaders, and software developers to gather information, identify relevant data, and specify the target audience. The elearning courses, exams, quizzes, handouts, and emails I developed, were built using Adobe InDesign, Adobe Photoshop, Adobe Captivate and designed for the web, which sparked my interest in front-end development.
+                    </br></br>
+                        The desire to learn front-end development led me to the Facebook Front-End Bootcamp at Grand Circus where I honed my skills in web development, coding, and responsive, mobile-first design.
+                    </br></br>
+                        I am looking to begin my career in software development in a role takes advantage of my background in design and passion for HTML, CSS, and mobile first design.
+                    </p>          
+
             </div>
         </section>
 
