--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a name="react"></a>
                 <h3 class="projectType">React/Redux Projects</h3>
                 <div>
-                     <div>
+                     <div class="innerProject">
                     <!-- Flash Cards -->
                         <h4>Fun Animal Facts Flash Card</h4>
                         <a class="projectImage"  href="https://chemley.github.io/ReactFlashCard/"><img src="images/flashCardAppScreenShot.jpg" alt="Screenshot of Flash Card App"></a>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div>
-                    <div class-"innerProject">
+                    <div class="innerProject">
                         <!-- I See You -->
                         <h4>I See You</h4>
                         <a class="projectImage" href="https://i-see-you.herokuapp.com/"><img src="images/iSeeYouScreenShot.jpg" alt="Screenshot of I See You"></a>
