--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
            <a class="contactFooter" href="https://github.com/Chemley" target="_blank"><i class="fab fa-github fa-lg"></i>GitHub</a>
             
             <!-- pdf resume set up on google drive as view and print and download -->
-            <a class="contactFooter" href="#(portfolio)" target="_blank"><i class="far fa-file-pdf fa-lg"></i>Resume</a>
+            <a class="contactFooter" href="https://drive.google.com/open?id=13cNxCOTNkaJNw_Gs2ehrFblcuc4fxScU" target="_blank"><i class="far fa-file-pdf fa-lg"></i>Resume</a>
         </footer>
         
     </body>
