--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- github (font awesome) -->
            <a class="contactFooter" href="https://github.com/Chemley" target="_blank"><i class="fab fa-github fa-lg"></i>GitHub</a>
             
-            <!-- pdf resume set up on google drive as view and print and download -->
+            <!-- pdf (font awesome) resume set up on google drive as view and print and download -->
             <a class="contactFooter" href="https://drive.google.com/open?id=13cNxCOTNkaJNw_Gs2ehrFblcuc4fxScU" target="_blank"><i class="far fa-file-pdf fa-lg"></i>Resume</a>
         </footer>
         
