links open new tab or page

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                      <div class="innerProject">
                     <!-- Flash Cards -->
                         <h4>Fun Animal Facts Flash Card</h4>
-                        <a class="projectImage"  href="https://chemley.github.io/ReactFlashCard/"><img src="images/flashCardAppScreenShot.jpg" alt="Screenshot of Flash Card App"></a>
+                        <a class="projectImage"  href="https://chemley.github.io/ReactFlashCard/" target="_blank"><img src="images/flashCardAppScreenShot.jpg" alt="Screenshot of Flash Card App"></a>
                         <p>Fun Animal Facts Flash Card web application allows the user the flip from the front of a card to the back, shuffle the cards, and navigage from the current card to the previous or next. This app is best viewed on a desktop.</p>
 
                         <!-- Richmans Reddit -->
                         <h4>Richmans Reddit</h4>
-                        <a class="projectImage" href="https://chemley.github.io/RichmansReddit/"><img src="images/richmansRedditAppScreenShot.jpg" alt="Screenshot of Richmans Reddit"></a>
+                        <a class="projectImage" href="https://chemley.github.io/RichmansReddit/" target="_blank"><img src="images/richmansRedditAppScreenShot.jpg" alt="Screenshot of Richmans Reddit"></a>
                         <p>Richmans Reddit is a single page web application that uses the Reddit AWWW API and React Routing to switch page views. This web app is best viewed on a desktop. </p>
                     </div>
                 </div>
@@ -61,12 +61,12 @@
                     <div class="innerProject">
                         <!-- I See You -->
                         <h4>I See You</h4>
-                        <a class="projectImage" href="https://i-see-you.herokuapp.com/"><img src="images/iSeeYouScreenShot.jpg" alt="Screenshot of I See You"></a>
+                        <a class="projectImage" href="https://i-see-you.herokuapp.com/" target="_blank"><img src="images/iSeeYouScreenShot.jpg" alt="Screenshot of I See You"></a>
                         <p>I See You is a single page web application built using the Full Contact API. It allows a user to see their entire digital footprint just entering their email addres. This app was designed mobile first and looks great desktop.</p>
     
                         <!-- MISCA Swim Finals 2018 -->
                         <h4>MICSA Swim Finals 2018</h4>
-                        <a class="projectImage" href="https://micsafinals2018.com/"><img src="images/micsaFinalsScreenShot.jpg" alt="MICSA Swim Finals"></a>
+                        <a class="projectImage" href="https://micsafinals2018.com/" target="_blank"><img src="images/micsaFinalsScreenShot.jpg" alt="MICSA Swim Finals"></a>
                         <p>MISCA Swim Finals 2018 was built with wordpress using a custom theme for MISCA. This site provides information and allows guests to purchase tickets to the finals.</p>
                 </div>
             </div>
